# so101_ros2

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  lerobot_ros2_inference.md  pyproject.toml
.github/workflows/: ci.yml  clang_format.yml  docs.yml  flake8.yml
docs/: bringup.rst  conf.py  datacollection.rst  getting_started.rst  imitation_learning.rst  index.rst  installation.rst  overview.rst  requirements.txt  ros2controlarch.rst  setup.rst
docs/_build/: .buildinfo  .buildinfo.bak  bringup.html  build.html  datacollection.html  genindex.html  getting_started.html  imitation_learning.html  index.html  objects.inv  overview.html  ros2controlarch.html  search.html  searchindex.js  setup.html
docs/_build/.doctrees/: build.doctree  datacollection.doctree  environment.pickle  getting_started.doctree  imitation_learning.doctree  index.doctree  ros2controlarch.doctree  setup.doctree
docs/_build/_sources/: build.rst.txt  getting_started.rst.txt  imitation_learning.rst.txt  index.rst.txt  ros2controlarch.rst.txt  setup.rst.txt  teleop.rst.txt
docs/_build/html/: .buildinfo  .buildinfo.bak  bringup.html  datacollection.html  genindex.html  index.html  installation.html  objects.inv  overview.html  search.html  searchindex.js  setup.html  teleop.html
docs/_build/html/.doctrees/: bringup.doctree  datacollection.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  setup.doctree  teleop.doctree
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/so101_smolvla_inference/share/so101_smolvla_inference/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/so101_smolvla_inference/share/so101_smolvla_inference/launch/: smolvla_inference.launch.py
log/: latest_build
so101_bringup/: CMakeLists.txt  package.xml
so101_bringup/config/: so101_cameras.yaml  so101_realsense2.yaml  so101_sdr.yaml  so101_usb_cam.yaml  so101_usb_cam_front.yaml
so101_bringup/launch/: so101_moveit.launch.py  so101_moveit_with_cameras.launch.py  so101_record.launch.py  so101_robot.launch.py  so101_robot_with_cameras.launch.py  so101_sim_gazebo.launch.py  so101_teleoperate.launch.py
so101_bringup/launch/include/: camera.launch.py  follower.launch.py  leader.launch.py  policy.launch.py  robot.launch.py  sim_gazebo.launch.py  sim_isaac.launch.py
so101_bringup/rviz/: robot_display_with_cameras.rviz
so101_controller/: CMakeLists.txt  package.xml
so101_controller/config/: so101_controllers.yaml
so101_controller/launch/: controller.launch.py  controller_manager.launch.py  controller_manager.py  so101_controllers.launch.py
so101_description/: .flake8  CMakeLists.txt  package.xml
so101_description/config/: initial_positions.yaml  joint_limits.yaml
so101_description/launch/: display.launch.py  display_robot.launch.py  rsp.launch.py
so101_description/rviz/: display.rviz
so101_description/urdf/: so101_new_calib.ros2_control.xacro  so101_new_calib.srdf  so101_new_calib.urdf  so101_new_calib.urdf.xacro  so101_new_calib1.urdf  so101_new_calib_gazebo.xacro  so101_new_calib_with_transmission.xacro  so101_new_calib_with_transmission1.xacro
so101_hardware_interface/: CMakeLists.txt  package.xml  so101_hardware_bridge_plugins.xml
so101_hardware_interface/src/: so101_hardware_bridge.cpp
so101_moveit/: CMakeLists.txt  package.xml
so101_moveit/config/: kinematics.yaml  moveit_controllers.yaml  so101_new_calib.srdf  so101_servo_config.yaml
so101_moveit/launch/: moveit.launch.py  moveit_display.launch.py  moveit_servo.launch.py
so101_moveit/rviz/: moveit.rviz
so101_moveit_config/: .setup_assistant  package.xml
so101_ros2/: CMakeLists.txt  package.xml
so101_ros2_bridge/: package.xml  setup.py
so101_ros2_bridge/config/: so101_follower_params.yaml  so101_leader_params.yaml  so101_policy_params.yaml
so101_ros2_bridge/config/calibration/: Gili.json  Tzili.json  follower.json  leader.json
so101_ros2_bridge/config/policies/: io.yaml  smolvla.yaml
so101_ros2_bridge/launch/: parameter_reference.yaml  smolvla_nodes.launch.py  smolvla_nodes.launch_pi05.py  smolvla_nodes.launch_smolvla.py  so101_ros2_bridge.launch.py  unified_nodes.launch.py
so101_ros2_bridge/so101_ros2_bridge/: LAUNCH_EXAMPLES.md  README.md  README_UNIFIED_INFERENCE.md  __init__.py  action_chunk_executor_node.py  follower_ros2_node.py  inference_node.py  leader_ros2_node.py  policy_runner_ros2_node.py  read_safe_tensor.py  smolvla_inference_node.py  smolvla_inference_node_pi05.py  smolvla_test_node.py  so101_ros2_bridge_node.py  spin_executor_node.sh  spin_inference_node.sh  spin_smolvla_launch.sh  spin_test_node.sh  utils.py
so101_ros2_bridge/so101_ros2_bridge/bridge/: __init__.py  bridge.py  build.py  registry.py
so101_ros2_bridge/so101_ros2_bridge/policy/: __init__.py  base.py  registry.py  runner.py  smolvla.py
so101_ros2_bridge/so101_ros2_bridge/utils/: buffer.py  conversion.py  filtering.py  utils.py
so101_sim/: CMakeLists.txt  README.md  package.xml
so101_sim/launch/: so101_sim_gazebo.launch.py
so101_smolvla_inference/: package.xml  setup.cfg  setup.py
so101_smolvla_inference/so101_smolvla_inference/: smolvla_inference_node.py
so101_teleop/: CMakeLists.txt  README.md  package.xml
so101_teleop/config/: so101_leader_teleop.yaml  so101_servo_config.yaml  so101_simulated_config.yaml
so101_teleop/include/so101_teleop/: joystick_servo_component.hpp  keyboard_servo_component.hpp  leader_teleop_component copy.hpp  leader_teleop_component.hpp
so101_teleop/launch/: so101_joy_teleop.launch.py  so101_joy_teleop_launch.launch.py  so101_keyboard_teleop.launch.py  so101_keyboard_teleop_launch.launch.py  so101_leader_teleop.launch.py
so101_teleop/rviz/: teleop_with_camera.rviz
so101_teleop/src/: joystick_servo_component.cpp  joystick_servo_example.cpp  joystick_servo_node.cpp  keyboard_servo_component.cpp  keyboard_servo_node.cpp  leader_teleop_component copy.cpp  leader_teleop_component.cpp  leader_teleop_node.cpp  servo_keyboard_input.cpp
(+8 files in other folders)
