<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_moveit</name>
  <version>0.0.0</version>
  <description>MoveIt configuration and launch files for the SO101 manipulator.</description>
  <maintainer email="nimicu21@gmail.com">nimrod</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>so101_description</exec_depend>

  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
