<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>so101_sim</name>
  <version>0.0.0</version>
  <description>Gazebo simulation environment for the SO101 manipulator.</description>

  <maintainer email="nimicu21@gmail.com">nimiCurtis</maintainer>
  <!-- <author email="nimicu21@gmail.com">nimiCurtis</author> -->

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- <exec_depend>ros_gz_sim</exec_depend> -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
