<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>so101_teleop</name>
  <version>0.0.0</version>
  <description>Teleoperation nodes for controlling the SO101 manipulator via joystick or keyboard.</description>
  <maintainer email="nimicu21@gmail.com">nimiCurtis</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_common</depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>control_msgs</build_depend>
  <exec_depend>control_msgs</exec_depend>
  
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>



</package>
